test/typecheck/pass/float_prelude.sail
default Order dec
$include <prelude.sail>
$include <float.sail>
