test/typecheck/fail/nonexistent_overload.sail
default Order dec

$include <prelude.sail>

overload f = {not_a_real_function}
